# Qribbon

./: CMakeLists.txt  README.md
qxribbon/: CMakeLists.txt  framelesshelper.cpp  framelesshelper.h  header.list  ribbonactionsmanager_p.h  ribbonapplicationbutton.cpp  ribbonapplicationbutton.h  ribbonbar.cpp  ribbonbar.h  ribbonbar_p.h  ribbonbutton_p.h  ribbonbuttongroup.cpp  ribbonbuttongroup.h  ribboncolorbutton.cpp  ribboncolorbutton.h  ribboncolorbutton_p.h  ribboncontainers.cpp  ribboncontainers.h  ribboncontrols.cpp  ribboncontrols.h  ribboncustomizewidget_p.h  ribbongallery_p.h  ribbongallerygroup.cpp  ribbongallerygroup.h  ribbongallerygroup_p.h  ribbongroup_p.h  ribbonmenu.cpp  ribbonmenu.h  ribbonpage.cpp  ribbonpage.h  ribbonpage_p.h  ribbonquickaccessbar.cpp  ribbonquickaccessbar.h  ribbontabbar.cpp  ribbontabbar.h  ribbontheme.cpp  ribbontheme.h  ribbonutils.cpp  ribbonutils.h  ribbonwindow.cpp  (+4 more)
qxribbon/private/: titlebarbuttons.cpp  titlebarbuttons.h
qxribbon/res/stylesheets/: dark_wps.css  light_classic.css  light_fancy.css  light_yellow.css
ribbondemo/: aboutdialog.cpp  aboutdialog.h  main.cpp  mainwindow.cpp  ribbonappwindow.cpp
